feature signup, devise+angular-devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body ng-app="CustomerSupport">
+    <header>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div ng-include="'nav/_nav.html'" class="header-nav"></div>
+          </div>
+        </div>
+      </div>
+    </header>
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2"><!--left sidebar--></div>
